--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "db-recipe-book",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start":"nodemon index.js"
+  },
   "repository": "git@github.com:linkel/db-recipe-book.git",
   "author": "linkel <ironcarbide@gmail.com>",
   "license": "MIT",
